syntax = "proto3";

package ihavefood;

option go_package =  "/genproto";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "common.proto";


// ---------------------MERCHANT SERVICE------------------------
// merchant manages restaurant
service MerchantService {

    rpc ListMerchants(google.protobuf.Empty) returns(ListMerchantsResponse){
        option (google.api.http) = {
            get: "/api/merchants" 
        };
    }
    rpc GetMerchant(GetMerchantRequest) returns(Merchant){
        option (google.api.http) = {
            get: "/api/merchants/{merchant_id}" 
        };
    }

    // RegisterMerchant registers a new merchant.
    rpc RegisterMerchant(RegisterMerchantRequest) returns(Merchant){
        option (google.api.http) = {
            post: "/api/merchants" 
            body: "*"
        };
    }

    // Menu management
    rpc CreateMenuItem(CreateMenuItemRequest) returns(MenuItem){
        option (google.api.http) = {
            post: "/api/merchants/menu"
            body: "*"
        };
    }
    // rpc UpdateMenuItem(UpdateMenuItemRequest) returns (MenuItem);

    // Store Management
    rpc UpdateStoreStatus(UpdateStoreStatusRequest) returns (StoreStatusResponse);
    rpc GetStoreStatus(GetStoreStatusRequest) returns (StoreStatusResponse);
}

enum StoreStatus{
    CLOSED = 0;
    OPEN = 1;
}

message Merchant {
    string merchant_id = 1;
    string merchant_name = 2;
    repeated MenuItem menu = 3;
    Address address = 4;
    string phone_number = 5;
    StoreStatus status = 6;
}

message MenuItem {
    string item_id = 1;
    string food_name = 2;
    int32 price = 3;
    string description = 4;
    bool is_available = 5;
}

message GetMerchantRequest{
    string merchant_id = 1;
}

message ListMerchantsResponse{
    repeated Merchant merchants = 1;
}

message RegisterMerchantRequest {
    string merchant_name = 1;
    repeated MenuItem menu = 2;
    Address address = 3;
}

message CreateMenuItemRequest {
    string merchant_id = 1;
    repeated MenuItem menu = 2;
}

message UpdateStoreStatusRequest {
    string merchant_id = 1;
    StoreStatus status = 2;
}

message StoreStatusResponse {
    string merchant_id = 1;
    StoreStatus status = 2;
}

message GetStoreStatusRequest {
    string merchant_id = 1;
}
